--- a/www/MODEOUTLED/Views/Shared/_PartialNavigation.cshtml
+++ b/www/MODEOUTLED/Views/Shared/_PartialNavigation.cshtml
@@ -25,7 +25,12 @@
                             </span>
                         </a>
                     </li>
-
+                    <li class="SubFirst">
+                        <a href="../../Language/LanguageIndexot/">
+                            <span class="SubMenuText">Ngôn ngữ
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
@@ -114,6 +119,12 @@
                     <li class="SubFirst">
                         <a href="../../GroupLibrary/GroupLibraryIndexot">
                             <span class="SubMenuText">Quản lý nhóm thư viện
+                            </span>
+                        </a>
+                    </li>
+                    <li class="SubFirst">
+                        <a href="../../Library/LibraryIndexot">
+                            <span class="SubMenuText">Quản lý  thư viện
                             </span>
                         </a>
                     </li>
