--- a/www/MODEOUTLED/Views/Shared/_PartialNavigation.cshtml
+++ b/www/MODEOUTLED/Views/Shared/_PartialNavigation.cshtml
@@ -31,6 +31,12 @@
                             </span>
                         </a>
                     </li>
+                    <li class="SubFirst">
+                        <a href="../../UserModule/UserModuleIndex/">
+                            <span class="SubMenuText">Module
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
@@ -104,11 +110,11 @@
                     </li>*@
                 </ul>
             </li>
-            <li>
+            @*<li>
                 <a href="../../Order/OrderIndexot" style="background-image: none">
                     <span class="MenuText"><i class="icon-bar-chart"></i>Quản lý đơn hàng bán lẻ</span>
                 </a>
-            </li>
+            </li>*@
             <li>
                 <a class="TopMenuItem" href="javascript:;">
                     <span class="MenuText"><i class="icon-user"></i>Quản lý thư viện ảnh
